[package]
name = "varies"
version = "0.1.1"
edition = "2018"
homepage = "https://github.com/sahandevs/varies"
description = "multi variant functions"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"]}
quote = "1.0"
